Menambahkan link pada social media

--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                     Thank you for visiting my personal portfolio website. Connect with me over socials.
                 </p>
                 <div class="socials">
-                    <a href="#"><i class="ri-instagram-line"></i></a>
-                    <a href="#"><i class="ri-facebook-line"></i></a>
-                    <a href="#"><i class="ri-whatsapp-line"></i></a>
-                    <a href="#"><i class="ri-twitter-line"></i></a>
+                    <a href="https://www.instagram.com/ananta.exe/"><i class="ri-instagram-line"></i></a>
+                    <a href="https://web.facebook.com/search/top/?q=Ananta%20Nur"><i class="ri-facebook-line"></i></a>
+                    <a href="https://www.linkedin.com/in/dibya-ananta-nur-a16792283/?originalSubdomain=id"><i class="ri-linkedin-line"></i></a>
+                    <a href="https://x.com/Anan_exe"><i class="ri-twitter-line"></i></a>
                 </div>
         </div>
         <div class="column">
