menambahkan nomor whatsapp

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </div>
         <div class="column">
             <h4>Contact Info</h4>
-            <p><i class="ri-phone-fill"></i>+62 XXX-XXXX-XXX</p>
+            <p><i class="ri-phone-fill"></i>+62 812-5832-848</p>
             <p><i class="ri-mail-fill"></i> nuranantadibya@gmail.com</p>
             <p><i class="ri-map-pin-fill"></i> Banjarmasin, Indonesia</p>
         </div>
